# yorichecker

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
yorichecker/: __init__.py  cli.py
