[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yorichecker"
version = "0.1.0"
description = "A CLI tool to check Crunchyroll account credentials"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Yori Checker", email = "yorichecker@example.com"}
]
keywords = ["crunchyroll", "account", "checker", "cli", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "playwright>=1.40.0",
]

[project.urls]
Homepage = "https://github.com/harshi79/yorichecker"
Repository = "https://github.com/harshi79/yorichecker"
"Bug Tracker" = "https://github.com/harshi79/yorichecker/issues"

[project.scripts]
yorichecker = "yorichecker.cli:main"